clusters/labinfra/apps/redis.xuperson.org/rest-api/redis-rest-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-rest-api
  namespace: redis
  labels:
    app: redis-rest-api
spec:
  selector:
    app: redis-rest-api
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
