clusters/labinfra/apps/redis.xuperson.org/rest-api/redis-rest-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-rest-api
  namespace: redis
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "redis-api.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: redis-api.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-rest-api
            port:
              number: 80
